--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-INDEX.HTMLLLLLL
+<html>
+  <head>
+    <title>PUDDINGBONES</title>
+    <style type="text/css">
+    html {
+      background: url(puddingbones.jpg) no-repeat center center fixed;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+    }
+    </style>
+  </head>
+  <body></body>
+</html>
