--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>PUDDINGBONES</title>
     <style type="text/css">
     html {
-      background: url(puddingbones.jpg) no-repeat center center fixed;
+      background: url(puddingbones.jpg) no-repeat center right fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
